Update API_URL for production deployment

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             // --- CONFIGURATION ---
-            const API_URL = 'http://localhost:3001'; // <-- For local testing. Change to your Render URL when deployed.
+            const API_URL = 'https://medbloc-ipfs.onrender.com'; // <-- For local testing. Change to your Render URL when deployed.
 
             // --- DOM ELEMENTS ---
             const authView = document.getElementById('auth-view');
