--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const API_URL = 'http://localhost:3001';
+            const API_URL = 'https://medbloc-ipfs.onrender.com';
 
             // --- STATE ---
             let authToken = localStorage.getItem('authToken');
