--- a/public.html
+++ b/public.html
@@ -56,7 +56,7 @@
     <script>
         // IMPORTANT: Replace this with the URL of your DEPLOYED backend (e.g., your Render URL)
         // For local testing, it should be 'http://localhost:3001'
-        const API_URL = 'https://medbloc-ipfs.onrender.com';
+        const API_URL = 'http://localhost:3001';
 
         document.addEventListener('DOMContentLoaded', () => {
             const loadingState = document.getElementById('loadingState');
