Update API_URL to production endpoint

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     
     <script>
         // --- CONFIGURATION ---
-        const API_URL = 'http://localhost:3001';
+        const API_URL = 'https://medbloc-ipfs-1.onrender.com';
 
         // --- DOM ELEMENTS ---
         const authView = document.getElementById('authView');
